# hfm

./: .gitignore  .gitmodules  Makefile  Makefile.am  README  README.md  UnitTest.mk  annotated.html  classes.html  config.c  config_8h.html  config_8h_source.html  configure.ac  console_8h.html  console_8h_source.html  context.c  csv_8h.html  csv_8h_source.html  dir_0c9d2db9adc0f35528a299c178533706.html  dir_5f19312ba44a6823ef686085d5e3370f.html  dir_7897c5698bde527dd458d31aefe2acf4.html  dir_dbc7fb175f65a82c931b7898f490f8ef.html  es_8h.html  es_8h_source.html  file__created_8h.html  file__created_8h_source.html  file__deleted_8h.html  file__deleted_8h_source.html  file__filter_8h.html  file__filter_8h_source.html  file__modified_8h.html  file__modified_8h_source.html  file_filter.c  files.html  fnmatch.c  globals.html  globals_defs.html  globals_enum.html  globals_eval.html  globals_func.html  (+50 more)
cfg/: hfm.cfg
fcleaner/: Makefile  Makefile.am  Makefile.backup  fcleaner  fileutil.c  fileutil.h  filewatch.c  filewatch.h  hashtable.c  hashtable.h
fcleaner/tests/: Makefile  Makefile.am  test_checkdup.c  test_filewatch  test_hashtable  test_hashtable.c
fcleaner/tests/res/: file_second_01  symlink
include/: config.h  constants.h  context.h  file_filter.h  fnmatch.h  hfm.h  libhfm.h  log.h  policy.h  private.h  profile.h  strace.h  trapmngr.h  traps.h  util.h  vmi_helper.h  win.h  win_offsets.h  xen_helper.h
monitors/: Makefile  Makefile.am  Makefile.backup  access_changed.c  attr_changed.c  attr_changed.h  constants.h  file_created.c  file_created.h  file_deleted.c  file_deleted.h  file_filter.h  file_modified.c  file_modified.h  fnmatch.c  hidden_changed.c  hidden_changed.h  libmon.h  logfile_modified.c  logfile_modified.h  monitor.c  monitor.h  owner_changed.c  owner_changed.h  permission_changed.c  permission_changed.h
outputs/: Makefile  Makefile.am  console.c  console.h  csv.c  csv.h  es.c  es.h  output_format.c  output_format.h
search/: all_1.js  all_2.js  all_3.js  all_4.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_d.js  all_e.js  classes_0.js  classes_1.js  defines_0.js  enums_0.js  enums_1.js  enums_2.js  enums_4.js  enumvalues_0.js  files_0.js  files_2.js  files_3.js  files_4.js  files_6.js  files_7.js  files_8.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  search.js
src/: Makefile.am  config.c  context.c  hfm.c  log.c  main.c  multiwatch.c  policy.c  rekall.c  win.c  xen_helper.c
src/fcleaner/: Makefile.am  fileutil.c  fileutil.h  hashtable.c  main.c
src/fcleaner/tests/: test_checkdup  test_filewatch.c  test_symlink  test_symlink.c
src/include/: config.h  context.h  hfm.h  multiwatch.h  private.h  rekall.h  trapmngr.h  win.h  win_offsets.h  xen_helper.h
src/monitors/: Makefile.am  access_changed.c  attr_changed.c  file_created.c  file_deleted.c  file_modified.c  monitor.c  monitor_util.c  monitor_util.h
src/outputs/: Makefile.am  console.c  csv.c  es.c  es.h  output_format.c  output_format.h
tests/: .test001.c.swp  Makefile  Makefile.am  UnitTest.mk  config_check.c  correct.policy  filefilter_check.c  incorrect.policy  log_check.c  policy_check.c  server2003.cfg  server2008.cfg  test001.c  test001.cfg  test002.c  test002.pol  test003.c  test004.c  test005  test006  test007  test008  test009.c  test010  test010.c  test011.c  test012.c  test013.c  test106.c  test107.c  test108.c  vista32.cfg  win7_32.cfg  windows10.cfg  windows8.cfg  windows8_32.cfg  winxp32.cfg
tests/cmp/: test002.want  test003.want  test004.want  test005.want  test009.want  test010.want  test011.want  test012.want  test013.want
tests/tmp/: test001.got
