AM_CFLAGS=-ggdb -O0 -I../include -I../outputs -I/usr/include/glib-2.0 -I/usr/lib/x86_64-linux-gnu/glib-2.0/include
AM_LDFLAGS=glib-2.0

libsdir=./
libs_LIBRARIES = libmon.a

libmon_a_SOURCES = monitor.c file_created.c file_deleted.c file_modified.c owner_changed.c attr_changed.c access_changed.c file_filter.c fnmatch.c

